--- a/style.css
+++ b/style.css
@@ -58,3 +58,24 @@ main{
     flex-wrap: wrap;
     justify-content: center;
 }
+
+#search{
+    width: 230px;
+    height: 30px;
+    border: 1px solid rgb(119, 70, 70);
+    outline: none;
+    border-radius: 20px;
+    padding-left: 15px;
+}
+main{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+main div{
+    width: 250px;
+    height: 320px;
+    margin: 19px 15px;
+    background: rgb(133, 99, 99);
+}
