--- a/style.css
+++ b/style.css
@@ -79,3 +79,8 @@ main div{
     margin: 19px 15px;
     background: rgb(133, 99, 99);
 }
+img{
+    width: 100%;
+    height: 89%;
+    object-fit: cover;
+}
